affichage des enemies

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>SpaceDiving</title>
 </head>
 <body>
-    <h1>SpaceDiving</h1>
+    <canvas id="game"></canvas>
     
-    <script src="./index.js"></script>
+    <script type="module" src="./index.js"></script>
 </body>
 </html>
